--- a/personal_Reference_Project/package.json
+++ b/personal_Reference_Project/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "short-unique-id": "^4.4.4",
+    "uuid": "^9.0.0"
   }
 }
